[gd_scene load_steps=15 format=2]

[ext_resource path="res://Audio.gd" type="Script" id=1]
[ext_resource path="res://assets/fx/shot.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/fx/found.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/minitroid.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/fx/death.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/fx/kill.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/fx/powerup.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/fx/reveal.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/fx/vanish.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/fx/hurt.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/fx/bounc.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/fx/enemy_shot.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/fx/land.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/fx/shield.wav" type="AudioStream" id=14]

[node name="Audio" type="Node"]
script = ExtResource( 1 )

[node name="ShotAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0

[node name="Found" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 8.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0

[node name="Kill" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0

[node name="PowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Reveal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0

[node name="Vanish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -9.0

[node name="bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="EnemyShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -3.0

[node name="Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -3.0

[node name="Shield" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0
pitch_scale = 1.35
